@@ -1,9 +1,10 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form col="2">
+<form>
     <image name="tryton-question" xexpand="0" xfill="0"/>
-    <label string="Choose move to recreate:" id="choose"
-        yalign="0.5" xalign="0.0" xexpand="1"/>
-    <field name="recreate_moves" colspan="2" widget="multiselection"/>
+    <label string="Choose cancelled stock move to ignore or recreate:" id="choose" yalign="0.5" xalign="0.0" xexpand="1" colspan="3"/>
+
+    <field name="ignore_moves" colspan="2" view_ids="stock.move_view_tree_simple"/>
+    <field name="recreate_moves" colspan="2" view_ids="stock.move_view_tree_simple"/>
 </form>
