@@ -2265,8 +2265,19 @@ class HandleShipmentExceptionAsk(ModelView):
     'Handle Shipment Exception'
     __name__ = 'sale.handle.shipment.exception.ask'
     recreate_moves = fields.Many2Many(
-        'stock.move', None, None, 'Recreate Stock Moves',
-        domain=[('id', 'in', Eval('domain_moves'))])
+        'stock.move', None, None, "Stock Moves to Recreate",
+        domain=[
+            ('id', 'in', Eval('domain_moves', [])),
+            ('id', 'not in', Eval('ignore_moves', [])),
+            ],
+        help="The selected cancelled stock moves will be recreated.")
+    ignore_moves = fields.Many2Many(
+        'stock.move', None, None, "Stock Moves to Ignore",
+        domain=[
+            ('id', 'in', Eval('domain_moves', [])),
+            ('id', 'not in', Eval('recreate_moves', [])),
+            ],
+        help="The selected cancelled stock moves will be ignored.")
     domain_moves = fields.Many2Many(
         'stock.move', None, None, 'Domain Stock Moves')
 
@@ -2291,7 +2302,6 @@ class HandleShipmentException(Wizard):
                 if move.state == 'cancelled' and move not in skips:
                     moves.append(move.id)
         return {
-            'recreate_moves': moves,
             'domain_moves': moves,
             }
 
@@ -2309,7 +2319,7 @@ class HandleShipmentException(Wizard):
                     continue
                 if move in self.ask.recreate_moves:
                     moves_recreated.append(move.id)
-                else:
+                elif move in self.ask.ignore_moves:
                     moves_ignored.append(move.id)
 
             SaleLine.write([line], {
@@ -2324,10 +2334,19 @@ class HandleInvoiceExceptionAsk(ModelView):
     'Handle Invoice Exception'
     __name__ = 'sale.handle.invoice.exception.ask'
     recreate_invoices = fields.Many2Many(
-        'account.invoice', None, None, 'Recreate Invoices',
-        domain=[('id', 'in', Eval('domain_invoices'))],
-        help='The selected invoices will be recreated. '
-        'The other ones will be ignored.')
+        'account.invoice', None, None, "Invoices to Recreate",
+        domain=[
+            ('id', 'in', Eval('domain_invoices', [])),
+            ('id', 'not in', Eval('ignore_invoices', []))
+            ],
+        help="The selected cancelled invoices will be recreated.")
+    ignore_invoices = fields.Many2Many(
+        'account.invoice', None, None, "Invoices to Ignore",
+        domain=[
+            ('id', 'in', Eval('domain_invoices', [])),
+            ('id', 'not in', Eval('recreate_invoices', []))
+            ],
+        help="The selected cancelled invoices will be ignored")
     domain_invoices = fields.Many2Many(
         'account.invoice', None, None, 'Domain Invoices')
 
@@ -2351,7 +2370,6 @@ class HandleInvoiceException(Wizard):
             if invoice.state == 'cancelled' and invoice not in skips:
                 invoices.append(invoice.id)
         return {
-            'recreate_invoices': invoices,
             'domain_invoices': invoices,
             }
 
@@ -2361,7 +2379,7 @@ class HandleInvoiceException(Wizard):
         for invoice in self.ask.domain_invoices:
             if invoice in self.ask.recreate_invoices:
                 invoices_recreated.append(invoice.id)
-            else:
+            elif invoice in self.ask.ignore_invoices:
                 invoices_ignored.append(invoice.id)
 
         self.model.write([self.record], {
