@@ -1,10 +1,11 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form col="2">
+<form>
     <image name="tryton-question" xexpand="0" xfill="0"/>
-    <label string="Choose invoices to recreate:" id="choose"
-        yalign="0.5" xalign="0.0" xexpand="1"/>
-    <field name="recreate_invoices" colspan="2" widget="multiselection"/>
+    <label string="Choose cancelled invoices to ignore or recreate:" id="choose" yalign="0.5" xalign="0.0" xexpand="1" colspan="3"/>
+
+    <field name="ignore_invoices" colspan="2"/>
+    <field name="recreate_invoices" colspan="2"/>
 </form>
 
